--- a/FD Chatbot.ipynb
+++ b/FD Chatbot.ipynb
@@ -7,7 +7,7 @@
     "id": "JMXGlIvAwn30"
    },
    "source": [
-    "# The FD Chat Bot Format\n",
+    "# The FD Booking Chat Bot\n",
     "\n",
     "In this notebook a sincere try to create chat bot/conversational inerface to book a Fixed Deposit for a set of NBFC. Data used in this Notebook is only Sample and Names of NBFC are also sample, these do not reflect any real data\n",
     "\n",
@@ -247,8 +247,8 @@
    "metadata": {},
    "source": [
     "# Verfication and Next Steps\n",
-    "By executing the below code, you can see bot has collected the information correctlty even of the order of the information was random\n",
-    "Json output provided by below method can be passed to the FD Booking Service which can process rhe request\n",
+    "By executing the below code, you can see bot has collected the information correctlty even if the order of the information was random\n",
+    "Json output provided by below method can be passed to the FD Booking Service which can process the request\n",
     "FD Booking Service - Not part of this code, has to be developed seprately"
    ]
   },
